--- a/blog_styles.css
+++ b/blog_styles.css
@@ -18,7 +18,7 @@
 
     /* Styling colours */
     --default-color: #2d2d2d;
-    --grey: #9e9e9e;
+    --grey: #333030;
     --red: #eb5757;
     --orange: #f2994a;
     --yellow: #f2c94c;
@@ -36,6 +36,7 @@
 /*          Global Styles           */
 /* ================================ */
 body {
+    background-color: var(--mainwhite);
     background-color: var(--mainwhite);
     font-family: Arial, sans-serif;
     font-size: 18px;
@@ -135,6 +136,10 @@ h3:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.outer-img-container img {
+    max-width: 60%;
 }
 
 figcaption {
